[gd_scene load_steps=2 format=3 uid="uid://dqvn8y35ax23b"]

[ext_resource type="Script" path="res://Units/unit_info_window.gd" id="1_g6u0w"]

[node name="unit_info_window" type="Window"]
size = Vector2i(500, 500)
unfocusable = true
script = ExtResource("1_g6u0w")

[node name="stat_label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "Manpower: 0
Morale: 0
Exp: 0"

[node name="destination_label" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -180.0
offset_right = -81.0
offset_bottom = 23.0
grow_horizontal = 0
text = "Destination: "

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="close_requested" from="." to="." method="_on_close_requested"]
